Pack proper archive on release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     types:
       - created
 jobs:
-  svn_sync:
+  pack_on_release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
