--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
         "php": ">=7.4",
         "buckaroo/sdk": "^1.4.0"
     },
+    "autoload": {
+        "psr-4": {
+          "Buckaroo3\\Controller\\": "controllers/admin"
+        }
+      },
     "config": {
         "preferred-install": "dist",
         "prepend-autoloader": false
