BP-2746 Partial Refund does not work as it should.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "autoload": {
         "psr-4": {
-          "Buckaroo3\\Controller\\": "controllers/admin"
+          "Buckaroo\\Prestashop\\": "src",
+          "Buckaroo3\\Prestashop\\Controller\\": "controllers/admin"
         }
       },
     "config": {
