--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -6,6 +6,7 @@ on:
       - master
       - develop
       - "prestashop-plugin-vue"
+      - "sonarqube"
   pull_request:
     types: [opened, synchronize, reopened]
 
