--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,23 +1,22 @@
-name: SonarQube Analysis
-
 on:
   push:
     branches:
       - master
-      - develop
       - "prestashop-plugin-vue"
+      - develop
+      - 'releases/**'
   pull_request:
     types: [opened, synchronize, reopened]
+name: SonarQube PR Analysis
 jobs:
-  build:
-    name: SonarQube Analysis
+  sonarqube:
     runs-on: ubuntu-latest
-    permissions: read-all
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: sonarsource/sonarqube-scan-action@master
+          fetch-depth: 0
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
