--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "php": ">=7.4",
-        "buckaroo/sdk": "^1.8.0",
-        "firebase/php-jwt": "^6.8"
+        "buckaroo/sdk": "^1.8.0"
     },
     "autoload": {
         "psr-4": {
