--- a/config/services.yml
+++ b/config/services.yml
@@ -123,7 +123,7 @@ services:
     public: true
 
   buckaroo.config.countries.service:
-    class: Buckaroo\PrestaShop\Controllers\admin\Countries
+    class: Buckaroo\PrestaShop\Src\Service\BuckarooCountriesService
     arguments:
       - "@doctrine.orm.entity_manager"
     public: true
@@ -170,4 +170,28 @@ services:
       - "@buckaroo.config.api.config.service"
     public: true
 
-    
+  buckaroo.config.api.fee.service:
+    class: Buckaroo\PrestaShop\Src\Service\BuckarooFeeService
+    arguments:
+      - "@doctrine.orm.entity_manager"
+    public: true
+
+  buckaroo.classes.issuers.payByBank:
+    class: Buckaroo\PrestaShop\Classes\IssuersPayByBank
+    public: true
+
+  buckaroo.classes.issuers.capayableIn3:
+    class: Buckaroo\PrestaShop\Classes\CapayableIn3
+    arguments:
+      - "@buckaroo.config.api.config.service"
+    public: true
+
+  buckaroo.config.api.payment.service:
+    class: Buckaroo\PrestaShop\Src\Service\BuckarooPaymentService
+    arguments:
+      - "@doctrine.orm.entity_manager"
+      - "@buckaroo.config.api.fee.service"
+      - "@buckaroo.config.api.config.service"
+      - "@buckaroo.classes.issuers.payByBank"
+      - "@buckaroo.classes.issuers.capayableIn3"
+    public: true
