--- a/config/services.yml
+++ b/config/services.yml
@@ -116,7 +116,7 @@ services:
       - "@doctrine.orm.entity_manager"
     public: true
 
-  buckaroo.config.controllers.paymentMethod:
+  Buckaroo\PrestaShop\Controllers\admin\PaymentMethodConfig:
     class: Buckaroo\PrestaShop\Controllers\admin\PaymentMethodConfig
     arguments:
       - "@buckaroo.config.api.config.service"
@@ -128,41 +128,41 @@ services:
       - "@doctrine.orm.entity_manager"
     public: true
 
-  buckaroo.config.controllers.countries:
+  Buckaroo\PrestaShop\Controllers\admin\Countries:
     class: Buckaroo\PrestaShop\Controllers\admin\Countries
     public: true
 
-  buckaroo.config.controllers.creditcards:
+  Buckaroo\PrestaShop\Controllers\admin\Creditcards:
     class: Buckaroo\PrestaShop\Controllers\admin\Creditcards
     public: true
 
-  buckaroo.config.controllers.orderings:
+  Buckaroo\PrestaShop\Controllers\admin\Orderings:
     class: Buckaroo\PrestaShop\Controllers\admin\Orderings
     arguments:
       - "@doctrine.orm.entity_manager"
     public: true
 
-  buckaroo.config.controllers.methodMode:
+  Buckaroo\PrestaShop\Controllers\admin\PaymentMethodMode:
     class: Buckaroo\PrestaShop\Controllers\admin\PaymentMethodMode
     arguments:
       - "@buckaroo.config.api.config.service"
     public: true
 
-  buckaroo.config.controllers.methods:
+  Buckaroo\PrestaShop\Controllers\admin\PaymentMethods:
     class: Buckaroo\PrestaShop\Controllers\admin\PaymentMethods
     arguments:
       - "@buckaroo.config.api.config.service"
     public: true
-  
-  buckaroo.config.controllers.settings:
+
+  Buckaroo\PrestaShop\Controllers\admin\Settings:
     class: Buckaroo\PrestaShop\Controllers\admin\Settings
     public: true
 
-  buckaroo.config.controllers.testCredentials:
+  Buckaroo\PrestaShop\Controllers\admin\TestCredentialsApi:
     class: Buckaroo\PrestaShop\Controllers\admin\TestCredentialsApi
     public: true
-    
-  buckaroo.config.controllers.verificationMethods:
+
+  Buckaroo\PrestaShop\Controllers\admin\VerificationMethods:
     class: Buckaroo\PrestaShop\Controllers\admin\VerificationMethods
     arguments:
       - "@buckaroo.config.api.config.service"
