--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         }
       },
     "config": {
+        "platform": {
+            "php": "7.4"
+        },
         "preferred-install": "dist",
         "prepend-autoloader": false
     },
